--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "fix-parcel": "npx npm-force-resolutions && npm i && npm i",
-    "start": "parcel index.html",
+    "dev": "parcel index.html",
     "build": "npm run clear && parcel build index.html",
     "lint": "eslint src/**/*.js",
     "format": "prettier --write src/**/*.js",
