--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "scripts": {
     "fix-parcel": "npx npm-force-resolutions && npm i && npm i",
-    "dev": "parcel index.html",
+    "start": "parcel index.html",
     "build": "npm run clear && parcel build index.html",
     "lint": "eslint src/**/*.js",
     "format": "prettier --write src/**/*.js",
     "format:lint": "npm run format && npm run lint",
-    "clear": "rimraf dist .parcel-cache"
+    "clear": "rimraf dist .parcel-cache",
+ "predeploy": "npm run build",
+ "deploy": "gh-pages -d build",
+ "test": "react-scripts test",
+ "eject": "react-scripts eject"
   },
   "resolutions": {
     "@babel/preset-env": "7.13.8"
@@ -32,6 +36,7 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
+    "gh-pages": "^3.2.3",
     "parcel": "^1.12.4",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2"
